--- a/htmlFrames/uploadDownload.html
+++ b/htmlFrames/uploadDownload.html
@@ -25,6 +25,7 @@ Cleaned and Prepared - July 2016
     <!--javascript-->
     <script src=".././lib/jquery-1.12.4.min.js"></script>
     <script src=".././lib/filesaver.min.js"></script>
+    <script src="helpersFE.js"></script>
     <!--css-->
     <link rel="stylesheet" type="text/css" href="./frameStylesheet.css">
     <!--external fonts (this only loads necessary characters)-->
