--- a/htmlFrames/options.html
+++ b/htmlFrames/options.html
@@ -29,7 +29,7 @@ Cleaned and Prepared - July 2016
   <link rel="stylesheet" type="text/css" href="./frameStylesheet.css">
   <!--external fonts -->
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC:700' rel='stylesheet' type='text/css'>
-
+  <script src=/front-end/helpersFE.js></script>
   <!-- /INCLUDES -->
 
   <!--additional styling-->
@@ -141,7 +141,14 @@ Cleaned and Prepared - July 2016
     window.scrollTo(0, 0);
   }//end function saveCurrentOptionsState
 
+function optEsc(e){
+    if (e.keyCode == 27){
+        saveCurrentOptionsState();
+    }
+}
 
+document.addEventListener('keyup',optEsc); 
+//document.addEventListener('keyup',optEsc);
   //this function gets the current option parameters which are stored as text in 
   // the parameter div
   // it then updates the options page accordingly, since the iframe has no memory of
