--- a/htmlFrames/startup.html
+++ b/htmlFrames/startup.html
@@ -194,7 +194,8 @@ function startSandbox() {
 
 //startUtilities hides the startup page elements and displays utilities
 function startUtilities() {
-  document.addEventListener('keyup',backUp );   
+//Event Listener for utilities escape. Go back when escape is pressed
+document.addEventListener('keyup',backUp );   
  //Update Buttons appropriately
  document.getElementById('startupButton1').style.display = "none";
  document.getElementById('startupButton2').style.display = "none";
@@ -226,18 +227,18 @@ document.getElementById('startupInformationText').innerHTML = "";
 
  }, 400);
 } //end startUtilities
-
-    function backUp(e){
+ 
+//Function to call the back up ie reset the page back to the start up page 
+function backUp(e){
     if (e.keyCode == 27){
-     parent.reset();
+     reset();
+        document.removeEventListener('keyup',backUp);
    }
 }
 
-   
-
-
 //startPlay hides the startup page elements and displays the level selector
 function startPlay() {
+ document.addEventListener('keyup',playbackUp);
  //Update Buttons appropriately
  document.getElementById('startupButton1').style.display = "none" ;
  document.getElementById('startupButton3').style.display = "none" ;
@@ -271,6 +272,13 @@ function startPlay() {
  }, 400) ;
 } //end startPlay
 
+//function that goes back to start up. Linked to event listener
+function playbackUp(e){
+    if (e.keyCode == 27){
+        reset();
+        document.removeEventListener('keyup',playbackUp );
+    }
+}
 // this function simply hides the main content from the startup page
 function hideBackgroundStartupElements() {
    document.getElementById('startupButton1').style.visibility = "hidden" ;
